infra/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-it-tools-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: eks-it-tools
