infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-it-tools-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    external-dns.alpha.kubernetes.io/hostname: it-tools.eks.hamsa-ahmed.co.uk
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - it-tools.eks.hamsa-ahmed.co.uk
    secretName: eks-it-tools-tls
  rules:
  - host: it-tools.eks.hamsa-ahmed.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eks-it-tools-service
            port:
              number: 80
